030-software/fluxcd/apps/browserless/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: browserless
  labels:
    namespace: browserless
