030-software/fluxcd/apps/browserless/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: browserless
  labels:
    app: browserless
spec:
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: browserless
  template:
    metadata:
      labels:
        app: browserless
        policy.gatekeeper.sh/ignore-container-must-have-limits: "true"
    spec:
      automountServiceAccountToken: false
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        seccompProfile:
          type: RuntimeDefault
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                topologyKey: kubernetes.io/hostname
                labelSelector:
                  matchLabels:
                    app: browserless
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app: browserless
      containers:
        - name: browserless
          image: ghcr.io/browserless/chromium:v2.56.7
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            capabilities:
              drop:
                - ALL
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          startupProbe:
            tcpSocket:
              port: http
          livenessProbe:
            tcpSocket:
              port: http
          readinessProbe:
            httpGet:
              path: /docs
              port: http
          resources:
            requests:
              cpu: 100m
              memory: 512Mi
            limits:
              memory: 4096Mi
          volumeMounts:
            - mountPath: /tmp
              name: data
      volumes:
        - name: data
          emptyDir:
            medium: Memory
