030-software/fluxcd/apps/browserless/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: browserless
  labels:
    app.kubernetes.io/name: browserless
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: browserless
