030-software/fluxcd/apps/browserless/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: browserless
  annotations:
    dashboard.${domain}/name: browserless
    dashboard.${domain}/url: https://browserless.${domain}/debugger/?token=EeJ4Ou3waagh7goMohsah6sooTeehoom
    dashboard.${domain}/icon: navigation
spec:
  hostnames:
    - browserless.${domain}
  parentRefs:
    - name: cilium
      namespace: cilium
  rules:
    - backendRefs:
        - name: browserless
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
