030-software/fluxcd/apps/browserless/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: browserless
  annotations:
    kubernetes.io/ingress.class: ${ingressClass}
    cert-manager.io/cluster-issuer: ca-cluster-issuer
    dashboard.${domain}/name: browserless
    dashboard.${domain}/url: https://browserless.${domain}/debugger/?token=EeJ4Ou3waagh7goMohsah6sooTeehoom
    dashboard.${domain}/icon: navigation

    nginx.ingress.kubernetes.io/service-upstream: "true"
    nginx.ingress.kubernetes.io/proxy-next-upstream-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-next-upstream-tries: "0"
spec:
  rules:
  - host: browserless.${domain}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: browserless
            port:
              number: 80
  tls:
  - hosts:
    - browserless.${domain}
    secretName: browserless-cert
# ---
# apiVersion: keda.sh/v1alpha1
# kind: ScaledObject
# metadata:
#   name: browserless
#   labels:
#     deploymentName: browserless
# spec:
#   scaleTargetRef:
#     name: browserless
#   pollingInterval: ${pollingInterval}
#   cooldownPeriod: ${cooldownPeriod}
#   minReplicaCount: 0
#   maxReplicaCount: 1
#   triggers:
#   - type: prometheus
#     metadata:
#       serverAddress: http://prometheus-server.prometheus
#       metricName: connection_refused
#       threshold: '1'
#       query: sum(increase(vector_ingress_nginx_connection_refused{host="browserless.${domain}"}[30s]))
#   - type: prometheus
#     metadata:
#       serverAddress: http://prometheus-server.prometheus
#       metricName: access_frequency
#       threshold: '1'
#       query: sum(increase(nginx_ingress_controller_requests{ingress="browserless",namespace="browserless"}[2m]))
